# airodev1

./: README.md  pyproject.toml
knowledge/: user_preference.txt
src/airodev/: crew.py  main.py
src/airodev/config/: agents.yaml  crew.yaml  tasks.yaml
src/airodev/tools/: page_suggester.py  recall_tool.py  web_search_tool.py  wordpress_elementor_tool.py
