[project]
name = "airodev"
version = "0.1.0"
description = "airodev using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
airodev = "airodev.main:run"
run_crew = "airodev.main:run"
train = "airodev.main:train"
replay = "airodev.main:replay"
test = "airodev.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
