[project]
name = "airodev"
version = "0.1.0"
description = "Airodev: An autonomous web designer agent using CrewAI and Elementor integration."
authors = [
  { name = "Your Name", email = "your@email.com" }
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/vpronok/airodev1"

[tool.uv]
# Optional: UV-specific configuration if needed in the future

[tool.poetry.dependencies]
python = "^3.9"
crewai = "^0.30.6"
crewai-tools = "^0.1.7"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
